--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mesa-pioneer-construction",
+    "name": "azrefugee",
     "private": true,
     "version": "0.0.0",
     "type": "module",
